applications/hello-world-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "hello-nginx.gitops.efertone.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-world
                port:
                  number: 80
